Moved script classes into a subpackage